<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic strings -->
    <string name="app_name">Ventarron</string>
    <string name="search">Buscar</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="keyword">Búsqueda</string>
    <string name="hello_world">Hello world!</string>
    <string name="permissions">Permisos</string>
    <string name="groups">Grupos</string>
    <string name="create">Crear</string>
    <string name="read">Leer</string>
    <string name="update">Actualizar</string>
    <string name="delet">Borrar</string>
    <string name="alert">Alerta</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="bs">Bs.</string>
    <string name="question_delete_item">Está seguro que desea eliminar este registro?</string>
    <string name="set_permission">Adicionar o modificar permisos</string>
    <string name="new_element">Nuevo Elemento</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="invalid_information">Información inválida</string>
    <string name="changes_failed">Los cambios no se realizaron</string>
    <string name="changes_ok">Cambios realizados</string>
    <string name="no_permissions">No se te asignaron permisos</string>
    <string name="no_create">No tiene permisos para crear</string>
    <string name="no_read">No tiene permisos para leer</string>
    <string name="no_update">No tiene permisos para actualizar</string>
    <string name="no_delete">No tiene permisos para borrar</string>
    <string name="continue_action">Continuar</string>

    <!-- Login common strings -->
    <string name="main_username">Username</string>
    <string name="main_password">Password</string>
    <string name="main_login">Iniciar Sesión</string>
    <string name="main_clear">Limpiar</string>
    <string name="main_insertUsername">Introduzca usuario</string>
    <string name="main_insertPassword">Introduzca password</string>

    <!-- Product common strings -->
    <string name="title_activity_product_list">ProductList</string>
    <string name="title_activity_edit_product">EditProductActivity</string>
    <string name="products">Productos</string>
    <string name="product_list">| Cantidad | Nombre | Precio | Código |</string>
    <string name="product_information">Información del Producto</string>
    <string name="productlist_newProduct">Nuevo Producto</string>
    <string name="product_code">Código:</string>
    <string name="product_name">Nombre:</string>
    <string name="product_price">Precio:</string>
    <string name="product_quantity">Cantidad:</string>
    <string name="product_description">Descripción:</string>

    <!-- Client common strings -->
    <string name="title_activity_client_list">ClientListActivity</string>
    <string name="title_activity_edit_client">EditClientActivity</string>
    <string name="client_information">Información del Cliente</string>
    <string name="clients">Clientes</string>
    <string name="client_name">Nombre:</string>
    <string name="client_email">Email:</string>
    <string name="client_address">Dirección:</string>
    <string name="client_phone">Teléfono:</string>
    <string name="client_newClient">Nuevo Cliente</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>

    <!-- User common strings -->
    <string name="users">Usuarios</string>
    <string name="user_name">Nombre:</string>
    <string name="user_username">Username:</string>
    <string name="user_password">Password:</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="user_information">Información del Usuario</string>

    <!-- Sales common strings -->
    <string name="title_activity_sale_selected_product_list">SaleSelectedProductListActivity</string>
    <string name="title_activity_sale_report">SaleReportActivity</string>
    <string name="start_sale">Iniciar Venta</string>
    <string name="finish_sale">Finalizar Venta</string>
    <string name="title_activity_sale_product_list">SaleProductListActivity</string>
    <string name="sale_select_products">Seleccionar Productos</string>
    <string name="sale_add_quantity">Asigne la cantidad a vender</string>
    <string name="sale_quantity">Se venderán:</string>
    <string name="sale_no_products_selected">No se seleccionó ningún elemento.</string>
    <string name="sale_finish_sale">¿Está seguro que desea finalizar la venta?</string>
    <string name="sale">Venta</string>
    <string name="sale_finished">Venta finalizada</string>
    <string name="sale_price">A pagar:</string>
    <string name="sale_report">Reporte de Ventas</string>
    <string name="sale_total_quantity">Cantidad total:</string>
    <string name="sale_total_price">Total pagado:</string>
    <string name="sale_date">Fecha:</string>
    <string name="sale_no_quantity_defined">No se puede realizar operación. Hay elementos sin una cantidad especificada</string>
    
</resources>
