<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="#192A56"
    >

	<LinearLayout android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="#192A56"	    
	    >
	    <!-- TODO: Reemplazar con las cosas necesarias -->

	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ventarron_mini" 
	        android:contentDescription="@string/logo"/>

	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/main_username" 
	        android:textStyle="bold"
	        android:textColor="#eee"
	        />

	    <EditText android:id="@+id/main_txtUsername"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" 
	        android:hint="@string/main_insertUsername"
	        />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/main_password" 
	        android:textStyle="bold"
	        android:textColor="#eee"
	        /> 
	        
	    <EditText android:id="@+id/main_txtPassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:hint="@string/main_insertPassword"
	        />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        android:layout_marginLeft="15dp"
	        >

	        <Button
	            android:id="@+id/main_btnLogin"
	            android:layout_width="130dp"
	            android:layout_height="match_parent"
	            android:text="@string/main_login" 
	            android:onClick="login"
	            />

	        <Button
	            android:id="@+id/main_btnClear"
	            android:layout_width="130dp"
	            android:layout_height="match_parent"
	            android:text="@string/main_clear" 
	            android:onClick="clearFields"
	            />

	    </LinearLayout>

	</LinearLayout>   

</RelativeLayout>
