<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" 
    android:orientation="vertical"
    android:background="#192A56"
    >

    <TextView android:id="@+id/menu_lblNoOptions" 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:textColor="#fff"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/no_permissions"
        />
    
    <Button android:id="@+id/menu_btnUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/users"
        android:onClick="navigateToUsers"
        />
    <Button android:id="@+id/menu_btnProducts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:onClick="navigateToProducts"
        />
    <Button android:id="@+id/menu_btnClients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clients"
        android:onClick="navigateToClients"
        />

</LinearLayout>
