<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/listitem_states"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/sale_date" 
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/sale_total_price" 
        />
    
    <TextView 
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/sale_total_quantity"
        />
    
    <TextView
        android:id="@+id/sale_lblTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView2"
        android:textColor="#fff"
        />

    <TextView
        android:id="@+id/sale_lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sale_lblTotalPrice"
        android:layout_alignParentTop="true"
        android:textColor="#fff"
        />

    <TextView
        android:id="@+id/sale_lblQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/sale_lblTotalPrice"
        android:textColor="#fff"
        />

</RelativeLayout>