<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/listitem_states"
    >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#eee"
	    />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
	    <LinearLayout
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        >
	        <ImageView android:src="@drawable/dummy_user"
	            android:layout_marginTop="3dp"
	            android:contentDescription="@string/hello_world"
	            android:layout_width="49dp"
	            android:layout_height="44dp" />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="5dp"
	        >
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		
		            <TextView
		                android:textColor="#fff"
		                android:textStyle="bold"
		                android:layout_width="0dp"
		                android:layout_weight="1"
		                android:layout_height="wrap_content"
		                android:text="@string/client_name" />
		
		            <TextView android:id="@+id/clientlist_lblName"
		                android:textColor="#fff"
		                android:layout_width="0dp"
		                android:layout_weight="2"
		                android:layout_height="wrap_content" />
		
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		
		            <TextView
		                android:textStyle="bold"
		                android:textColor="#fff"
		                android:layout_width="0dp"
		                android:layout_weight="1"
		                android:layout_height="wrap_content"
		                android:text="@string/client_email" />
		
		            <TextView android:id="@+id/clientlist_lblEmail"
		                android:textColor="#fff"
		                android:layout_width="0dp"
		                android:layout_weight="2"
		                android:layout_height="wrap_content" />
		
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		
		            <TextView
		                android:textStyle="bold"
		                android:textColor="#fff"
		                android:layout_width="0dp"
		                android:layout_weight="1"
		                android:layout_height="wrap_content"
		                android:text="@string/client_phone" />
		
		            <TextView android:id="@+id/clientlist_lblPhone"
		                android:textColor="#fff"
		                android:layout_width="0dp"
		                android:layout_weight="2"
		                android:layout_height="wrap_content"/>
		
		    </LinearLayout>
	    </LinearLayout>
    </LinearLayout>

</LinearLayout>
