<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/listitem_states"
    >
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#eee"
	    />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.88"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                >
                <TextView 
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:text="@string/product_code"
                    />
                <TextView android:id="@+id/sale_product_code"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                >
                <TextView 
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:text="@string/product_name"
                    />
                <TextView android:id="@+id/sale_product_name"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                >
                <TextView 
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:text="@string/product_price"
                    />
                <TextView android:id="@+id/sale_product_price"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    />
            </LinearLayout>
        </LinearLayout>
        
        
        <CheckBox android:id="@+id/sale_product_selected"
            android:layout_width="0dp"
            android:layout_weight="0.12"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </LinearLayout>

</LinearLayout>
